website/_versioned_docs/version-0.18/running-on-device-android.md
---
id: version-0.18-running-on-device-android
original_id: running-on-device-android
title: running-on-device-android
---
<a id="content"></a><h1>Running On Device</h1><div><h2><a class="anchor" name="prerequisite-usb-debugging"></a>Prerequisite: USB Debugging <a class="hash-link" href="#prerequisite-usb-debugging">#</a></h2><p>You'll need this in order to install your app on your device. First, make sure you have <a href="https://www.google.com/search?q=android+Enable+USB+debugging" target="_blank">USB debugging enabled on your device</a>.</p><p>Check that your device has been <strong>successfully connected</strong> by running <code>adb devices</code>:</p><div class="prism language-javascript">$ adb devices
List of devices attached
emulator<span class="token number">-5554</span> offline   # Google emulator
14ed2fcc device         # Physical device</div><p>Seeing <strong>device</strong> in the right column means the device is connected. Android - go figure :) You must have <strong>only one device connected</strong>.</p><p>Now you can use <code>react-native run-android</code> to install and launch your app on the device.</p><h2><a class="anchor" name="accessing-development-server-from-device"></a>Accessing development server from device <a class="hash-link" href="#accessing-development-server-from-device">#</a></h2><p>You can also iterate quickly on device using the development server. Follow one of the steps described below to make your development server running on your laptop accessible for your device.</p><blockquote><p>Hint</p><p>Most modern android devices don't have a hardware menu button, which we use to trigger the developer menu. In that case you can shake the device to open the dev menu (to reload, debug, etc.)</p></blockquote><h3><a class="anchor" name="using-adb-reverse"></a>Using adb reverse <a class="hash-link" href="#using-adb-reverse">#</a></h3><blockquote><p>Note that this option is available on devices running android 5.0+ (API 21).</p></blockquote><p>Have your device connected via USB with debugging enabled (see paragraph above on how to enable USB debugging on your device).</p><ol><li>Run <code>adb reverse tcp:8081 tcp:8081</code></li><li>You can use <code>Reload JS</code> and other development options with no extra configuration</li></ol><h3><a class="anchor" name="configure-your-app-to-connect-to-the-local-dev-server-via-wi-fi"></a>Configure your app to connect to the local dev server via Wi-Fi <a class="hash-link" href="#configure-your-app-to-connect-to-the-local-dev-server-via-wi-fi">#</a></h3><ol><li>Make sure your laptop and your phone are on the <strong>same Wi-Fi network</strong>.</li><li>Open your React Native app on your device. You can do this the same way you'd open any other app.</li><li>You'll see a red screen with an error. This is OK. The following steps will fix that.</li><li>Open the <strong>Developer menu</strong> by shaking the device or running <code>adb shell input keyevent 82</code> from the command line.</li><li>Go to <code>Dev Settings</code>.</li><li>Go to <code>Debug server host for device</code>.</li><li>Type in your machine's IP address and the port of the local dev server (e.g. 10.0.1.1:8081). <strong>On Mac</strong>, you can find the IP address in System Preferences / Network. <strong>On Windows</strong>, open the command prompt and type <code>ipconfig</code> to find your machine's IP address (<a href="http://windows.microsoft.com/en-us/windows/using-command-line-tools-networking-information" target="_blank">more info</a>).</li><li>Go back to the <strong>Developer menu</strong> and select <code>Reload JS</code>.</li></ol></div><div class="docs-prevnext"><a class="docs-next" href="embedded-app-android.html#content">Next →</a></div>